fix: popover + query

--- a/packages/textfield/src/textfield.css
+++ b/packages/textfield/src/textfield.css
@@ -143,7 +143,8 @@ textarea {
     );
 }
 
-form.input {
+form.input,
+#form-container {
     display: flex;
     padding: 0 !important;
     border: 0;
